--- a/Biblioteca.html
+++ b/Biblioteca.html
@@ -41,7 +41,17 @@
             </section>
             <section id="registro-usuarios" style="display: none;">
                 <h2>Registro de usuarios</h2>
-                <!-- Contenido de la sección de Registro de usuarios -->
+                <form id="userRegistrationForm" onsubmit="registerUser(event)">
+                    <label for="newUsername">Nombre de usuario:</label>
+                    <input type="text" id="newUsername" name="newUsername" required><br><br>
+                    <label for="newPassword">Contraseña:</label>
+                    <input type="password" id="newPassword" name="newPassword" required><br><br>
+                    <label for="email">Correo electrónico:</label>
+                    <input type="email" id="email" name="email" required><br><br>
+                    <label for="fullName">Nombre completo:</label>
+                    <input type="text" id="fullName" name="fullName" required><br><br>
+                    <button type="submit">Guardar</button>
+                </form>
             </section>
             <section id="libros-y-catalogo" style="display: none;">
                 <h2>Libros y catálogo</h2>
@@ -90,7 +100,6 @@
         }
 
         function showSection(sectionId) {
-
             document.querySelectorAll('main section').forEach(section => {
                 section.style.display = 'none';
             });
@@ -101,6 +110,25 @@
         function logout() {
             document.getElementById('loginPage').style.display = 'block';
             document.getElementById('mainPage').style.display = 'none';
+        }
+
+        function registerUser(event) {
+            event.preventDefault();
+
+            var newUsername = document.getElementById('newUsername').value;
+            var newPassword = document.getElementById('newPassword').value;
+            var email = document.getElementById('email').value;
+            var fullName = document.getElementById('fullName').value;
+
+            console.log('Usuario registrado:', {
+                username: newUsername,
+                password: newPassword,
+                email: email,
+                fullName: fullName
+            });
+
+            alert('Usuario registrado con éxito');
+            document.getElementById('userRegistrationForm').reset();
         }
     </script>
 </body>
