--- a/Biblioteca.html
+++ b/Biblioteca.html
@@ -51,7 +51,7 @@
                         <input type="email" id="email" name="email" required><br><br>
                         <label for="fullName">Nombre completo:</label>
                         <input type="text" id="fullName" name="fullName" required><br><br>
-                        <button type="submit">Guardar</button>
+                        <button type="submit" onclick="register()">Guardar</button>
                     </form>
                 </section>
                 <section id="libros-y-catalogo" style="display: none;">
