--- a/Biblioteca.html
+++ b/Biblioteca.html
@@ -48,7 +48,7 @@
                     <li><a href="#" onclick="showSection('libros-y-catalogo')">Libros y catálogo</a></li>
                     <li><a href="#" onclick="showSection('prestamos-y-reservaciones')">Préstamos y reservaciones</a></li>
                     <li><a href="#" onclick="showSection('reportes-y-estadisticas')">Reportes y estadísticas</a></li>
-                    <li><a href="#" onclick="showSection('configuraciones-avanzadas')">Configuraciones avanzadas</a></li>
+                    <li><a href="#" onclick="showSection('otros')">Otros</a></li>
                 </ul>
             </nav>
             <main>
@@ -148,9 +148,16 @@
                         <button type="submit">Agregar Multa</button>
                     </form>
                 </section>
-                <section id="configuraciones-avanzadas" style="display: none;">
-                    <h2>Configuraciones avanzadas</h2>
-                    <!-- Contenido de la sección de Configuraciones avanzadas -->
+                <section id="otros" style="display: none;">
+                    <h2>Otros</h2>
+                    <div class="publicidad">
+                        <h3>Libro recomendado: "Introduction to Linear Optimization" por Dimitris Bertsimas y John N. Tsitsiklis</h3>
+                        <p>Este libro es una excelente referencia para aquellos interesados en la investigación de operaciones y la programación lineal. Proporciona una introducción completa a los conceptos y técnicas clave. ¡Adquiérelo hoy!</p>
+                    </div>
+                    <div class="referencia">
+                        <h3>Referencia útil</h3>
+                        <p>Para más información sobre la programación lineal y la optimización, consulta el sitio web de la Sociedad de Investigación de Operaciones (INFORMS).</p>
+                    </div>
                 </section>
             </main>
         </div>
