--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -23,18 +23,6 @@
     </style>
 </head>
 <body>
-
-    <div id="loginPage">
-        <h2>Inicio de Sesión</h2>
-        <form id="loginForm" onsubmit="authenticate(event)">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required><br><br>
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required><br><br>
-            <button type="submit">Iniciar Sesión</button>
-        </form>
-    </div>
-
     <div id="mainPage">
         <header>
             <h1>LIBROTECA</h1>
@@ -55,6 +43,9 @@
                 <section id="administracion" style="display: none;">
                     <h2>Administración</h2>
                     <!-- Contenido de la sección de Administración -->
+                    <button onclick="fetchTableData('users')">Mostrar Usuarios</button>
+                    <button onclick="fetchTableData('books')">Mostrar Libros</button>
+                    <div id="tableContainer"></div>
                 </section>
                 <section id="registro-usuarios" style="display: none;">
                     <h2>Registro de usuarios</h2>
@@ -165,7 +156,6 @@
             <p>Hector, Emiliano, Danna</p>
         </footer>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
