--- a/WWW/Login.html
+++ b/WWW/Login.html
@@ -30,7 +30,7 @@
             <input type="text" id="username" name="username" required><br><br>
             <label for="password">Contraseña:</label>
             <input type="password" id="password" name="password" required><br><br>
-            <button type="submit">Iniciar Sesión</button>
+            <button type="submit" onclick="redirectToMainPage()">Iniciar Sesión</button>
         </form>
     </div>
     <script src="script.js"></script>
