--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -9,18 +9,39 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100vh; 
+            height: 100vh;
+        }
+        #mainPage {
+            height: 100vh;
             display: flex;
             flex-direction: column;
         }
-        #mainPage {
+        header {
+            flex-shrink: 0;
+        }
+        nav {
+            flex-shrink: 0; 
+        }
+        main {
             flex-grow: 1; 
-            display: none; 
+            display: flex;
         }
         footer {
             flex-shrink: 0; 
         }
-    </style>
+        nav ul {
+            list-style: none; 
+            padding: 0; 
+            margin: 0; 
+        }
+        nav ul li {
+            margin: 20px 0; 
+        }
+        nav ul li a {
+            text-decoration: none; 
+            color: white; 
+        }
+    </style>    
 </head>
 <body>
     <div id="mainPage">
