--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library System</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
     <style>
         body {
             margin: 0;
@@ -61,6 +63,9 @@
                 </ul>
             </nav>
             <main>
+                <div class="image-container" id="imageContainer">
+                    <img src="imagenes/imagen.jpg" alt="Presentación">
+                </div>
                 <section id="administracion" style="display: none;">
                     <h2>Administración</h2>
                     <div class="button-container">
