--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -61,7 +61,6 @@
                 </ul>
             </nav>
             <main>
-                <img src="imagenes/imagen.jpg" alt="Presentación" id="imageContainer">
                 <section id="administracion" style="display: none;">
                     <h2>Administración</h2>
                     <div class="button-container">
@@ -127,7 +126,28 @@
                     </form>
                     <h2>Catálogo de Libros</h2>
                     <section id="bookCatalog">
-                        <!-- Aquí se mostrará el catálogo de libros -->
+                        <ul id="bookList">
+                            <li>
+                                <img src="imagenes/CADA_HISTORIA_CUENTA.jpg" alt="Libro 1">
+                                <p>Cada Historia Cuenta</p>
+                            </li>
+                            <li>
+                                <img src="imagenes/EL_ZORRO_EN_EL_BOSQUE.jpg" alt="Libro 2">
+                                <p>El Zorro en el Bosque</p>
+                            </li>
+                            <li>
+                                <img src="imagenes/HEREDERA_DE_FUEGO.jpg" alt="Libro 2">
+                                <p>Heredera de Fuego</p>
+                            </li>
+                            <li>
+                                <img src="imagenes/MULTIPERSPECTIVA.PNG" alt="Libro 2">
+                                <p>Multiperspectiva</p>
+                            </li>
+                            <li>
+                                <img src="imagenes/REYES_CAIDOS.jpg" alt="Libro 2">
+                                <p>Reyes Caidos</p>
+                            </li>
+                        </ul>
                     </section>
                 </section>
                 <section id="prestamos-y-reservaciones" style="display: none;">
@@ -188,7 +208,7 @@
             </main>
         </div>
         <footer>
-            <a href="/about.html">Acerca de Nosotros</a> 
+            <a href="about.html">Acerca de Nosotros</a> 
         </footer>
     </div>
     <script src="script.js"></script>
