--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -52,12 +52,12 @@
         <div style="display: flex; flex: 1;">
             <nav>
                 <ul>
-                    <li><a href="#" onclick="showSection('administracion'); hideImage();">Administración</a></li>
-                    <li><a href="#" onclick="showSection('registro-usuarios'); hideImage();">Registros</a></li>
-                    <li><a href="#" onclick="showSection('libros-y-catalogo'); hideImage();">Libros y catálogo</a></li>
-                    <li><a href="#" onclick="showSection('prestamos-y-reservaciones'); hideImage();">Préstamos y reservaciones</a></li>
-                    <li><a href="#" onclick="showSection('reportes-y-estadisticas'); hideImage();">Reportes y estadísticas</a></li>
-                    <li><a href="#" onclick="showSection('otros'); hideImage();">Otros</a></li>
+                    <li><a href="#" onclick="showSection('administracion');">Administración</a></li>
+                    <li><a href="#" onclick="showSection('registro-usuarios');">Registros</a></li>
+                    <li><a href="#" onclick="showSection('libros-y-catalogo');">Libros y catálogo</a></li>
+                    <li><a href="#" onclick="showSection('prestamos-y-reservaciones');">Préstamos y reservaciones</a></li>
+                    <li><a href="#" onclick="showSection('reportes-y-estadisticas');">Reportes y estadísticas</a></li>
+                    <li><a href="#" onclick="showSection('otros');">Otros</a></li>
                 </ul>
             </nav>
             <main>
