--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -125,30 +125,7 @@
                         <button type="submit">Agregar Libro</button>
                     </form>
                     <h2>Catálogo de Libros</h2>
-                    <section id="bookCatalog">
-                        <ul id="bookList">
-                            <li>
-                                <img src="imagenes/CADA_HISTORIA_CUENTA.jpg" alt="Libro 1">
-                                <p>Cada Historia Cuenta</p>
-                            </li>
-                            <li>
-                                <img src="imagenes/EL_ZORRO_EN_EL_BOSQUE.jpg" alt="Libro 2">
-                                <p>El Zorro en el Bosque</p>
-                            </li>
-                            <li>
-                                <img src="imagenes/HEREDERA_DE_FUEGO.jpg" alt="Libro 2">
-                                <p>Heredera de Fuego</p>
-                            </li>
-                            <li>
-                                <img src="imagenes/MULTIPERSPECTIVA.PNG" alt="Libro 2">
-                                <p>Multiperspectiva</p>
-                            </li>
-                            <li>
-                                <img src="imagenes/REYES_CAIDOS.jpg" alt="Libro 2">
-                                <p>Reyes Caidos</p>
-                            </li>
-                        </ul>
-                    </section>
+                    <ul id="bookCatalog"></ul>
                 </section>
                 <section id="prestamos-y-reservaciones" style="display: none;">
                     <h2>Préstamos y reservaciones</h2>
