--- a/WWW/Libroteca.html
+++ b/WWW/Libroteca.html
@@ -148,6 +148,18 @@
                                 <img src="imagenes/REYES_CAIDOS.jpg" alt="Libro 2">
                                 <p>Reyes Caidos</p>
                             </li>
+                            <li>
+                                <img src="imagenes/COLD_ANDROID.webp" alt="Libro 2">
+                                <p>Cold Android</p>
+                            </li>
+                            <li>
+                                <img src="imagenes/EL_CABALLERO_ASTADO.jpg" alt="Libro 2">
+                                <p>El Caballero Astado</p>
+                            </li>
+                            <li>
+                                <img src="imagenes/LOS_JUICIOS_DE_SALEM.jpg" alt="Libro 2">
+                                <p>Los Juicios de Salem</p>
+                            </li>
                         </ul>
                     </section>
                 </section>
